My own course to teach Python to anyone. Supported by ANEE UG.

--- a/1_Py_A1_jpynb.ipynb
+++ b/1_Py_A1_jpynb.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/ecalderah/Statistics--B.A--Sandbox/blob/main/1_Py_A1_jpynb.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "J9IbCVjeRRNP"
       },
       "source": [
@@ -1126,7 +1136,8 @@
       ],
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNwzBXppe6doNgMcZ+e2y9l"
+      "authorship_tag": "ABX9TyNwzBXppe6doNgMcZ+e2y9l",
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
